4.3
===
- In order to implement https://github.com/jspresso/jspresso-ce/issues/187, the org.jspresso.framework.action.IAction
  interface now extends org.jspresso.framework.util.exception.IExceptionHandler. This shuld not require any modification
  to existing code unless you directly implement org.jspresso.framework.action.IAction without inheriting
  org.jspresso.framework.application.action.AbstractAction. In the latter case, you have now to implement the method
  public boolean handleException(Throwable ex, Map<String, Object> context)

- Jetty maven plugin changed its groupId. In the root pom.xml of your project, replace :

    <groupId>org.mortbay.jetty</groupId>
  by
    <groupId>org.eclipse.jetty</groupId>

- Rename all your sjs files from .sjs to .groovy and update your application.groovy content to reflect this change.

- JasperReports plugin changed from codehaus to to alexnederlof
  (https://github.com/alexnederlof/Jasper-report-maven-plugin).

  Replace your JasperReports compilation section in core/pom.xml by the following one :
      <plugin>
        <groupId>com.alexnederlof</groupId>
        <artifactId>jasperreports-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-resources</phase>
            <goals>
              <goal>jasper</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <outputDirectory>${project.build.directory}/generated-resources/jasperreports</outputDirectory>
        </configuration>
      </plugin>

- Flex has been upgraded to the latest 4.15 version. If necessary in your project, change all dependencies :

  from
      <dependency>
        <groupId>org.apache.flex.framework</groupId>
        <artifactId>flex-framework</artifactId>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.apache.flex.framework</groupId>
        <artifactId>framework</artifactId>
        <type>swc</type>