@@ -36,14 +36,14 @@ qx.Class.define("${package}.startup.qooxdoo.MobileApplication",
     start : function() {
       var remoteController;
       if (qx.core.Environment.get("qx.debug")) {
-        remoteController = new qx.io.remote.Rpc(
+        remoteController = new org.jspresso.framework.io.Rpc(
             "http://localhost:8080/${rootArtifactId}-webapp/.qxrpc",
             "${package}.startup.remote.RemoteMobileApplicationStartup"
         );
         remoteController.setCrossDomain(true);
       } else {
-        remoteController = new qx.io.remote.Rpc(
-            qx.io.remote.Rpc.makeServerURL(),
+        remoteController = new org.jspresso.framework.io.Rpc(
+            org.jspresso.framework.io.Rpc.makeServerURL(),
             "${package}.startup.remote.RemoteMobileApplicationStartup"
         );
       }
